# Prism

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  PRD-个人AI知识库系统.html  PRD-个人AI知识库系统.md  README.html  README.md  backup.sh  deploy.sh  docker-compose.release.yml  docker-compose.yml  nx.json  package-lock.json  package.json  proxy.js  pyproject.toml  restore.sh  基于-Memos-的个人-AI-知识库系统详细设计与开发计划.html  基于-Memos-的个人-AI-知识库系统详细设计与开发计划.md  开发计划与验收标准-个人AI知识库系统.html  开发计划与验收标准-个人AI知识库系统.md  技术架构设计-个人AI知识库系统.html  技术架构设计-个人AI知识库系统.md
.gemini/agents/: codegraph-search.md
.github/workflows/: docker-publish.yml
config/: app.yaml  models.yaml  prompts.yaml  taxonomy.yaml
docs/: API探针记录.html  API探针记录.md  P0-P1验收记录.html  P0-P1验收记录.md  PRD-个人AI知识库系统.html  使用手册.html  团队版-Memos-原生体验设计分析.html  团队知识库使用手册.html  团队知识库使用手册.md  基于-Memos-的个人-AI-知识库系统详细设计与开发计划.html  开发计划与验收标准-个人AI知识库系统.html  开发运行说明.html  开发运行说明.md  技术架构设计-个人AI知识库系统.html  普通用户使用手册.html  详细设计.html  配置说明.html  配置说明.md
docs/superpowers/plans/: 2026-05-23-admin-ui-tabs-responsive.md  2026-05-23-caddy-gateway-release.md
docs/superpowers/specs/: 2026-05-23-caddy-gateway-release-design.md  (+1 more)
gateway/: Caddyfile
scratch/: reprocess.py
scripts/: snapshot_teams_ui.py
sidecar/: project.json
src/memosima/: __init__.py
tests/: helpers.py  test_api.py  test_attachments.py  test_config.py  test_deployment.py  test_document_parsers.py  test_llm_provider.py  test_logs.py  test_memos_client.py  test_memos_probe.py  test_p3_qa_drawio.py  test_store.py  test_summary.py  test_teams.py  test_webhooks.py  test_worker.py
(+21 files in other folders)
