[project]
name = "memosima"
version = "0.5.0"
description = "AI sidecar service for a private Memos knowledge base."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "semble",
]

[project.scripts]
memosima-api = "memosima.api.app:main"
memosima-worker = "memosima.worker.runner:main"
memosima-probe-memos = "memosima.memos.probe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
